# TodoGnome

./: .gitignore  BUILD.md  Cargo.toml  README.md
extension/todognome@github/: extension.js  install.sh  metadata.json  stylesheet.css
extension/todognome@github/schemas/: org.gnome.shell.extensions.todognome.gschema.xml
src/: lib.rs  main.rs
