[package]
name = "todognome"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = { version = "0.7", package = "gtk4", features = ["v4_12"] }
gio = "0.19"
glib = "0.19"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }

[build-dependencies]
glib-build-tools = "0.19"